# little-SCF

./: CMakeLists.txt  README.md
data/: bas_sto-3g  env_sto-3g  json4byte.py
src/: little_SCF.h  main.c  tpdef.h
src/calc/: diyblas.c  diyblas.h  eint.c  eint.h  fock.c  fock.h  guess.c  guess.h  scf.c  scf.h
src/input/: byte2shell.c  byte2shell.h  struct2libcint.c  struct2libcint.h  xyz2atoms.c  xyz2atoms.h
test/: H2.xyz  H2O.xyz  O2.xyz
